--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,2 @@
-<h3>Welcome</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<h3>Welcome to The Cream of the Crop</h3>
+<h4>Please Sign In or Sign Up to continue</h4>
