--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,10 +2,17 @@
   <h3>Edit <%= resource_name.to_s.humanize %></h3>
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
     <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
-    </div>
+			<div class="form-group">
+				<h5>Please enter your name:</h5>
+				<%= f.label :name %>
+				<%= f.text_field :name, :autofocus => true, class: 'form-control' %>
+			</div>
+
+			<div class="form-group">
+				<h5>Please enter the name of your promotion:</h5>
+				<%= f.label :promotion %>
+				<%= f.text_field :promotion, :autofocus => true, class: 'form-control' %>
+			</div>
     <div class="form-group">
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
