--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,9 +3,17 @@
     <h3>Sign up</h3>
     <%= devise_error_messages! %>
     <div class="form-group">
+			<h5>Please enter your name:</h5>
       <%= f.label :name %>
       <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
     </div>
+
+			<div class="form-group">
+				<h5>Please enter the name of your promotion:</h5>
+				<%= f.label :promotion %>
+				<%= f.text_field :promotion, :autofocus => true, class: 'form-control' %>
+			</div>
+
     <div class="form-group">
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
