wrote sort method and sorted roster view

--- a/app/views/wrestlers/_form.html.erb
+++ b/app/views/wrestlers/_form.html.erb
@@ -28,8 +28,8 @@
     <%= f.number_field :position %>
   </div>
   <div class="field">
-    <%= f.label :injured? %><br>
-    <%= f.check_box :injured? %>
+    <%= f.label :injured, "injured?" %><br>
+    <%= f.check_box :injured %>
   </div>
   <div class="actions">
     <%= f.submit %>
