--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,3 +1,4 @@
 <h3>Welcome to The Cream of the Crop</h3>
 <h4>Please Sign In or Sign Up to continue</h4>
 <%= link_to 'Roster Page', wrestlers_path %>
+<%= link_to 'New Match', cards_path %>
