--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,4 +1,50 @@
-<h3>Welcome to The Cream of the Crop</h3>
+<div class="container">
+
+	<div class="row">
+		<div class="box">
+			<div class="col-lg-12 text-center">
+				<div id="carousel-example-generic" class="carousel slide">
+					<!-- Indicators -->
+					<ol class="carousel-indicators hidden-xs">
+						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+					</ol>
+
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner">
+						<div class="item active">
+							<%=image_tag "slide-1.jpg"  %>
+						</div>
+						<div class="item">
+							<%=image_tag "slide-2.jpg"  %>
+						</div>
+						<div class="item">
+							<%=image_tag "slide-3.jpg"  %>
+						</div>
+					</div>
+
+					<!-- Controls -->
+					<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+						<span class="icon-prev"></span>
+					</a>
+					<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+						<span class="icon-next"></span>
+					</a>
+				</div>
+				<h2 class="brand-before">
+					<small>Welcome to</small>
+				</h2>
+				<h1 class="brand-name">The Cream of the Crop</h1>
+				<hr class="tagline-divider">
+				<h2>
+					<small>By
+						<strong>An App by Michael Nash -- The Iron Yard St. Petersburg Ruby on Rails Cohort Summer 2015</strong>
+					</small>
+				</h2>
+			</div>
+		</div>
+	</div><h3>Welcome to The Cream of the Crop</h3>
 <h4>Please Sign In or Sign Up to continue</h4>
-<%= link_to 'Roster Page', wrestlers_path %>
-<%= link_to 'New Match', cards_path %>
+
+
