--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,6 +1,12 @@
-<h1>Your card is:</h1>
-	<% index = 1 %>
-	<% @card.matches.each do |match|  %>
-	  <h2> <%= index %>. <%=match.heel.name  %> vs. <%=match.babyface.name  %></h2>
-		<%index += 1  %>
-	<%end %>
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
+			<h1>Your card is:</h1>
+			<% index = 1 %>
+			<% @card.matches.each do |match|  %>
+	  		<h2> <%= index %>. <%=match.heel.name  %> vs. <%=match.babyface.name  %></h2>
+				<%index += 1  %>
+			<%end %>
+		</div>
+	</div>
+</div>
