--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,5 +1,6 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'About', page_path('about') %></li>
+<li><%= link_to 'Home', root_path %></li>
 <% if user_signed_in? %>
 	<li><%= link_to 'Roster Page', wrestlers_path %></li>
 		<li><%= link_to 'New Match', cards_path %></li>
