--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -14,13 +14,13 @@
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner">
 						<div class="item active">
-							<%=image_tag "slide-1.jpg"  %>
+							<%=image_tag "slide-1.jpg", class: "img-responsive img-full"  %>
 						</div>
 						<div class="item">
-							<%=image_tag "slide-2.jpg"  %>
+							<%=image_tag "slide-2.jpg", class: "img-responsive img-full"  %>
 						</div>
 						<div class="item">
-							<%=image_tag "slide-3.jpg"  %>
+							<%=image_tag "slide-3.jpg", class: "img-responsive img-full"  %>
 						</div>
 					</div>
 
@@ -35,16 +35,32 @@
 				<h2 class="brand-before">
 					<small>Welcome to</small>
 				</h2>
-				<h1 class="brand-name">The Cream of the Crop</h1>
+				<h1 class="brand-name">Cream of the Crop</h1>
 				<hr class="tagline-divider">
 				<h2>
-					<small>By
-						<strong>An App by Michael Nash -- The Iron Yard St. Petersburg Ruby on Rails Cohort Summer 2015</strong>
+					<small>An App by
+						<strong> Michael Nash </strong>
+						-- The Iron Yard St. Petersburg Ruby on Rails Cohort Summer 2015
 					</small>
 				</h2>
 			</div>
 		</div>
-	</div><h3>Welcome to The Cream of the Crop</h3>
-<h4>Please Sign In or Sign Up to continue</h4>
+	</div>
+	<div class="row">
+		<div class="box">
+			<div class="col-lg-12">
+				<hr>
+				<h2 class="intro-text text-center">Build a website
+					<strong>worth visiting</strong>
+				</h2>
+				<hr>
+				<%= image_tag "intro-pic.jpg", class: "img-responsive img-border img-left"  %>
+				<hr class="visible-xs">
+				<p>This is an app about dead wrestlers. </p>
+				<p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+			</div>
+		</div>
+	</div>
 
 
