--- a/app/views/wrestlers/index.html.erb
+++ b/app/views/wrestlers/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
-
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
 <h1><%=current_user.promotion  %> -- Roster</h1>
 <h2><strong>Your Wrestlers in the Main Event! ========================</h2></strong>
 <h3><u>Babyfaces (Tecnicos)</u>  ================================================</h3>
@@ -129,3 +131,4 @@
 
 
 <%= link_to 'New Wrestler', new_wrestler_path %>
+</div></div></div>
