--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
 <div class="authform">
+	<div class="row">
+		<div class="box">
+			<div class="col-lg-12">
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
     <h3>Sign up</h3>
     <%= devise_error_messages! %>
@@ -26,6 +29,9 @@
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
-     <%= f.submit 'Sign up', :class => 'button right' %>
+     <%= f.submit 'Sign up', :class => 'btn btn-large btn-primary' %>
   <% end %>
+</div>
+</div>
+</div>
 </div>
