--- a/app/views/wrestlers/edit.html.erb
+++ b/app/views/wrestlers/edit.html.erb
@@ -1,6 +1,12 @@
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
 <h1>Editing Wrestler</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @wrestler %> |
-<%= link_to 'Back', wrestlers_path %>
+<%= link_to 'Show', @wrestler, class: "btn btn-large btn-info" %> |
+<%= link_to 'Back', wrestlers_path, class: "btn btn-large btn-danger	" %>
+		</div>
+	</div
+</dv>
