--- a/app/views/wrestlers/new.html.erb
+++ b/app/views/wrestlers/new.html.erb
@@ -1,5 +1,11 @@
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
 <h1>New Wrestler</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', wrestlers_path %>
+<%= link_to 'Back', wrestlers_path, class: "btn btn-large btn-danger" %>
+		</div>
+	</div>
+</div>
