reworked roster page

--- a/app/views/wrestlers/index.html.erb
+++ b/app/views/wrestlers/index.html.erb
@@ -1,134 +1,231 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
+<div class="box">
+	<div class="col-lg-12">
+		<hr>
+		<h1 class="text-center">
+			<%=current_user.promotion  %> -- Roster</h1>
+		<hr>
+	</div>
+</div>
+</div>
+<div class="row">
 	<div class="box">
 		<div class="col-lg-12">
-<h1><%=current_user.promotion  %> -- Roster</h1>
-<h2><strong>Your Wrestlers in the Main Event! ========================</h2></strong>
-<h3><u>Babyfaces (Tecnicos)</u>  ================================================</h3>
-<% @main_event_babyfaces.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h3><u>Heels (Rudos)</u>  ================================================</h3>
-<% @main_event_heels.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h2><strong>Your Wrestlers in the High Card! ========================</h2></strong>
-<h3><u>Babyfaces (Tecnicos)</u>  ================================================</h3>
-<% @high_card_babyfaces.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h3><u>Heels (Rudos)</u>  ================================================</h3>
-<% @high_card_heels.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h2><strong>Your Wrestlers in the Mid Card! ========================</h2></strong>
-<h3><u>Babyfaces (Tecnicos)</u>  ================================================</h3>
-<% @mid_card_babyfaces.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h3><u>Heels (Rudos)</u>  ================================================</h3>
-<% @mid_card_heels.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h2><strong>Your Wrestlers in the Low Card! ========================</h2></strong>
-<h3><u>Babyfaces (Tecnicos)</u>  ================================================</h3>
-<% @low_card_babyfaces.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h3><u>Heels (Rudos)</u>  ================================================</h3>
-<% @low_card_heels.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h2><strong>Your Wrestlers in the Undercard! ========================</h2></strong>
-<h3><u>Babyfaces (Tecnicos)</u>  ================================================</h3>
-<% @undercard_babyfaces.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-<h3><u>Heels (Rudos)</u>  ================================================</h3>
-<% @undercard_heels.each do |wrestler|  %>
-		<%=image_tag wrestler.image.url  %>
-		<h4><%= wrestler.name  %></h4>
-		<%if wrestler.injured?  %>
-				<p><%= wrestler.name  %> is currently injured and unable to compete</p>
-		<%end  %>
-		<p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary" %></p>
-		<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
-		<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
-		btn-small btn-danger" %></p>
-<%end  %>
-
-
-<%= link_to 'New Wrestler', new_wrestler_path %>
+			<hr>
+			<h2 class="text-center">
+				<strong>Your Wrestlers in the Main Event! </h2></strong>
+				<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
+				<% @main_event_babyfaces.each do |wrestler|  %>
+					<div class="col-sm-4 text-center">
+						<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+						<h3><%= wrestler.name  %>
+						</h3>
+						<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+						%></p>
+							<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+							<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+					</div>
+					<%end  %>
+			</div>
+		</div>
+	</div>
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
+			<hr>
+<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
+			<% @main_event_heels.each do |wrestler|  %>
+					<div class="col-sm-4 text-center">
+						<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+						<h3><%= wrestler.name  %>
+						</h3>
+						<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+						%></p>
+							<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+							<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+					</div>
+			<%end  %>
+		</div>
+	</div>
+</div>
+<div class="row">
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
+			<hr>
+			<h2 class="text-center">
+				<strong>Your Wrestlers in the High Card! </h2></strong>
+			<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
+			<% @high_card_babyfaces.each do |wrestler|  %>
+					<div class="col-sm-4 text-center">
+						<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+						<h3><%= wrestler.name  %>
+						</h3>
+						<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+						%></p>
+							<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+							<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+					</div>
+			<%end  %>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="box">
+		<div class="col-lg-12">
+			<hr>
+			<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
+			<% @high_card_heels.each do |wrestler|  %>
+					<div class="col-sm-4 text-center">
+						<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+						<h3><%= wrestler.name  %>
+						</h3>
+						<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+						%></p>
+							<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+							<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+					</div>
+			<%end  %>
+		</div>
+	</div>
+</div>
+	<div class="row">
+		<div class="row">
+			<div class="box">
+				<div class="col-lg-12">
+					<hr>
+					<h2 class="text-center">
+						<strong>Your Wrestlers in the Mid Card! </h2></strong>
+					<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
+					<% @mid_card_babyfaces.each do |wrestler|  %>
+							<div class="col-sm-4 text-center">
+								<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+								<h3><%= wrestler.name  %>
+								</h3>
+								<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+								%></p>
+									<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+									<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+							</div>
+					<%end  %>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="box">
+				<div class="col-lg-12">
+					<hr>
+					<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
+					<% @mid_card_heels.each do |wrestler|  %>
+							<div class="col-sm-4 text-center">
+								<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+								<h3><%= wrestler.name  %>
+								</h3>
+								<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+								%></p>
+									<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+									<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+							</div>
+					<%end  %>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="row">
+				<div class="box">
+					<div class="col-lg-12">
+						<hr>
+						<h2 class="text-center">
+							<strong>Your Wrestlers in the Low Card! </h2></strong>
+						<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
+						<% @low_card_babyfaces.each do |wrestler|  %>
+								<div class="col-sm-4 text-center">
+									<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+									<h3><%= wrestler.name  %>
+									</h3>
+									<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+									%></p>
+										<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+										<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+								</div>
+						<%end  %>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="box">
+					<div class="col-lg-12">
+						<hr>
+						<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
+						<% @low_card_heels.each do |wrestler|  %>
+								<div class="col-sm-4 text-center">
+									<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+									<h3><%= wrestler.name  %>
+									</h3>
+									<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+									%></p>
+										<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+										<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+								</div>
+						<%end  %>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="row">
+					<div class="box">
+						<div class="col-lg-12">
+							<hr>
+							<h2 class="text-center">
+								<strong>Your Wrestlers in the Undercard! </h2></strong>
+							<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
+							<% @undercard_babyfaces.each do |wrestler|  %>
+									<div class="col-sm-4 text-center">
+										<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+										<h3><%= wrestler.name  %>
+										</h3>
+										<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+										%></p>
+											<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+											<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+									</div>
+							<%end  %>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="box">
+						<div class="col-lg-12">
+							<hr>
+							<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
+							<% @undercard_heels.each do |wrestler|  %>
+									<div class="col-sm-4 text-center">
+										<%=image_tag wrestler.image.url, class: "img-responsive"  %>
+										<h3><%= wrestler.name  %>
+										</h3>
+										<h6 class= "text-center"><p><%= link_to 'Wrestler Profile', wrestler, class: "btn btn-small btn-primary"
+										%></p>
+											<p><%= link_to 'Change Details', edit_wrestler_path(wrestler), class: "btn btn-small btn-info" %></p>
+											<p><%= link_to 'You\'re Fired', wrestler, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn
+		btn-small btn-danger" %></p></h6>
+									</div>
+							<%end  %>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="box">
+						<div class="col-lg-12">
+							<hr>
+<%= link_to 'New Wrestler', new_wrestler_path, class: "btn btn-large center-block btn-success" %>
 </div></div></div>
