--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
 						<%=link_to 'Jermaine Divine', ("http://jermainedivine.deviantart.com/art/Rest-In-Peace-Macho-Man-209926236")  %> over at Deviant
 						art.</p>
 					<p>Would you like to learn more <%= link_to 'About', page_path('about') %> Cream of the Crop and its
-						author?</p>
+						author?</p>c
 				</div>
 			</div>
 		</div>
