--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -2,10 +2,15 @@
 	<div class="box">
 		<div class="col-lg-12">
 			<h1>Your card is:</h1>
-			<% index = 1 %>
+			<% index = 8 %>
 			<% @card.matches.each do |match|  %>
+				<%unless match.heel.blank? || match.babyface.blank?  %>
 	  		<h2> <%= index %>. <%=match.heel.name  %> vs. <%=match.babyface.name  %></h2>
-				<%index += 1  %>
+					<%else  %>
+							<h2>Youd do not have enough wrestlers to have a match at position <%=index  %>. Hire a new wrestler,
+								turn a face heel, or turn a heel face</h2>
+					<%end  %>
+				<%index -= 1  %>
 			<%end %>
 		</div>
 	</div>
